crates/domain/tests/violations/domain_imports_tracing.stderr
error[E0432]: unresolved import `tracing`
 --> tests/violations/domain_imports_tracing.rs:5:5
  |
5 | use tracing::info;
  |     ^^^^^^^ use of unresolved module or unlinked crate `tracing`
  |
  = help: if you wanted to use a crate named `tracing`, use `cargo add tracing` to add it to your `Cargo.toml`
